--- a/style.css
+++ b/style.css
@@ -78,22 +78,105 @@
 #hinh{
     display: flex;
     flex-direction: row;
-    width: 50%;
+    width: 85%;
 }
 #hinh-left{
     display: flex;
     margin-left: 130px;
     margin-top: 10px;
+    width: 50%;
+}
+#hinh-right{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
 #hinh-right-top{
     display: flex;
     flex-direction: row;
     margin-left: 20px;
-    margin-top: 10px;   
+    margin-top: 10px;
+    width: 100%;
 }
 #hinh-right-bot{
     display: flex;
     flex-direction: row;
     margin-left: 20px;
-    margin-top: 10px;  
+    margin-top: 10px; 
+    width: 100%;
+}
+#content-head{
+    display: flex;
+    font-size: 15px;
+}
+#content{
+    display: flex;
+    flex-direction: row;
+    margin-left: 130px;
+    margin-top: 30px;
+    width: 80%;
+}
+#content-center{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+#content-footer{
+    display: flex;
+    flex-direction: row;
+}
+#content-left{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+#content-footer-left{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.content-footer-left-one{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+#content-footer-right{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: 50px;
+}
+.content-footer-right-one{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+#content-right{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+#gia{
+    display: flex;
+    justify-content: end;
+    margin-right: 30px;
+    font-size: 30px;
+}
+#luachon{
+    display: flex;
+    align-items: end;
+    flex-direction: column;
+    margin-top: 15px;
+}
+.luachon-one{
+    display: flex;
+    margin-top: 15px;
+}
+.luachon-two{
+    display: flex;
+    margin-top: 15px;
+}
+.luachon-three{
+    display: flex;
+    margin-top: 15px;
 }
