--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
 #content-left{
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 80%;
 }
 #content-footer-left{
     display: flex;
@@ -154,7 +154,11 @@
 #content-right{
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 30%;
+    border: 1px rgba(0, 0, 0, 0.228) solid;
+    padding: 10px;
+    border-radius: 3px;
+    margin-left: 10%;
 }
 #gia{
     display: flex;
@@ -166,17 +170,75 @@
     display: flex;
     align-items: end;
     flex-direction: column;
-    margin-top: 15px;
+    margin-top: 10px;
 }
-.luachon-one{
+#total{
     display: flex;
-    margin-top: 15px;
+    justify-content: space-between;
+    margin-top: 20px;
+}.buy-now{
+    background-color: rgb(43, 220, 233);
+    color: aliceblue;
+    width: 100%;
+    border: none;
+    height: 40px;
+    border-radius: 3px;
+    margin-top: 10px;
 }
-.luachon-two{
-    display: flex;
+.cart{
+    background-color: white;
+    border-color:aqua;
+    color: aqua;
+    width: 100%;
+    height: 40px;
     margin-top: 15px;
+    border-radius: 3px;
 }
-.luachon-three{
+#content-end{
     display: flex;
-    margin-top: 15px;
+    margin-top: 60px;
+    margin-left: 120px;
+    width: 80%;
+    flex-direction: column;
+}
+#content-end-one{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+#content-end-one-left{
+    display: flex;
+    margin-bottom: 20px;
+    /* width: 100%; */
+}
+#content-end-one-right{
+    display: flex;
+}
+#content-end-two{
+    display: flex;
+    flex-direction: row;
+}
+#content-end-two-left{
+    display: flex;
+    flex-direction: column;
+    width: 50%; 
+}
+.comment-one{
+    margin-bottom: 30px;
+}
+.comment-one-left{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+}
+#content-end-two-right{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-left: 50px;
+}
+.comment-two-left{
+    display: flex;
+    width: 50%;
+
 }
