--- a/style.css
+++ b/style.css
@@ -242,3 +242,114 @@
     width: 50%;
 
 }
+#content-center-footer{
+    display: flex;
+    margin-left: 120px;
+    margin-top: 50px;
+    width: 80%;
+    flex-direction: column;
+    
+}
+#content-center-footer-left{
+    display: flex;
+    width: 95%;
+}
+#content-center-footer-right{
+    display: flex;
+    width: 8%;
+}
+#content-center-footer-one{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+#content-center-footer-two{
+    display: flex;
+    width: 100%;
+    
+}
+.sanpham{
+    display: flex;
+    flex-direction: column;
+    width: 26%;
+    border-radius: 5px;
+    margin-right: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.068);
+}
+.ten-sp{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.item{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+#footer{
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
+    flex-direction: column;
+}
+#logo-footer{
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+}
+#subcribe{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
+#input-sub{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 25px;
+}
+#input-text{
+    width: 250px;
+    height: 35px;
+    border:none;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    background-color: rgba(128, 128, 128, 0.128);
+}
+#footer-menu{
+    display: flex;
+    justify-content: center;
+    margin-left: 100px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width: 80%;
+    justify-content: space-around;
+}
+.form{
+    margin-top: 7px;
+}
+#footer-end{
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin-left: 100px;
+    padding-top: 25px;
+    justify-content: space-between;
+}
+#mxh{
+    margin-left: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
